chore: seal before jpms changes
Signed-off-by: Sam Gammon <sam@elide.ventures>